--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="facebook_app_id">1179370925445081</string>
     <string name="fb_login_protocol_scheme">fb1179370925445081</string>
+    <string name="LoginWithfacebook" >Login with Facebook</string>
 </resources>
